Small update to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JS Code Katas</title>
+    <title>JavaScript Code Katas</title>
     <meta charset="UTF-8" />
   </head>
 
